# Music-Visualizer

./: DEVELOPER_NOTES.md  README.md  main.py  pyproject.toml
app/: __init__.py  __main__.py  audio_engine.py  config.py  dsp.py  main.py  models.py  ui.py  utils.py
app/audio_sources/: __init__.py  base.py  file_playback.py  system_loopback.py
app/visualizers/: __init__.py  bars.py  base.py  radial.py  waveform.py
tests/: conftest.py  test_audio_engine.py  test_dsp.py  test_spectrum_visualizers.py  test_system_loopback.py  test_ui.py  test_waveform_visualizer.py
