[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "music-visualizer"
version = "0.1.0"
description = "Desktop music visualizer built with Python, Qt, and NumPy."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "numpy>=1.26,<3",
  "PySide6>=6.7,<7",
  "sounddevice>=0.5,<1",
  "soundfile>=0.12,<1",
  "soundcard>=0.4,<1; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]

[project.scripts]
music-visualizer = "app.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"

[tool.hatch.build.targets.wheel]
packages = ["app"]
